--- a/aula 4/index.html
+++ b/aula 4/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    
+    <h4>Título do meu site</h4>
+    <h3>Título do meu site</h3>
+    <h2>Título do meu site</h2>
+    <h1>Título do meu site</h1>
   </body>
 </html>
