--- a/aula 4/index.html
+++ b/aula 4/index.html
@@ -2,12 +2,22 @@
 <html>
   <head>
     <title>Título do meu website</title>
-    <meta charset="utf-8"/>
+    <meta charset='utf-8'/>
   </head>
   <body>
+    <h2>Título do meu site</h2>
+    <!--
     <h4>Título do meu site</h4>
     <h3>Título do meu site</h3>
     <h2>Título do meu site</h2>
     <h1>Título do meu site</h1>
+    
+    <p>Um texto maior para o meu site do curso webmaster PRO</p>  Tag em blocos 
+    <span>Um texto maior para o meu site do curso webmaster PRO</span> Tag inline
+    <br> Ou <br/> quebra de linha
+    <span>Um texto maior para o meu site do curso webmaster PRO</span>
+    -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates illo molestias fuga aliquid quod minus reprehenderit perferendis dolor labore pariatur sunt natus, illum reiciendis quo minima. Totam, magnam cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem vero eveniet adipisci iste cupiditate quis corporis sequi provident, odio explicabo ipsa odit nobis. Ipsum facere dolorum neque voluptate voluptatum?</p>
   </body>
 </html>
