--- a/aula 11/index.html
+++ b/aula 11/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="./css/style.css" type="text/css">
   </head>
   <body>
-    <div class="div1">
-      <h1>Meu título 1</h1>
-    </div>
-    <div class="div2">
-      <h1>Meu título 2</h1>
+    <div class="menu">
+      <a href="">Home</a>
+      <a href="">Produtos</a>
+      <a href="">Sobre</a>
+      <a href="">Contato</a>
+      <a href="">Galeria</a>
     </div>
   </body>
 </html>
